added css and links

--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
              </p>
     </div>
         <a class="column titles work" work" id="work">Work</a>
-        <div class="picCon">
-            <img class="workPic" src="./assets/pictures/knights.jpg" href="https://rpgthegame.herokuapp.com/" > 
-            <img class="workPic" src="./assets/pictures/keyboard2.jpg"> 
-            <img class="workPic" src="./assets/pictures/code.jpg"> 
-
+        <div class="picCon">           
+            <a href="https://rpgthegame.herokuapp.com/"><img class="workPic" src="./assets/pictures/knights.jpg"></a>          
+            <a href="https://stiicer.github.io/Very-good-calendar-/"><img class="workPic" src="./assets/pictures/keyboard2.jpg"></a>
+            <a href="https://stiicer.github.io/Super-hard-quiz/"><img class="workPic" src="./assets/pictures/code.jpg"></a>           
         </div>
         <a class="column titles contact" id="contact">Contact</a>
+        <p class="bio" style=" text-decoration: underline;">Please contact me using the links below</p>
+        <p class="bio">diegoandremora@gmail.com</p><a class="bio" href="github.com/Stiicer">github</a>
         <a class="column titles resume" id="resume" >Resume</a>
+        <p class="bio">Resume in progress</p>
         </section>
         
 
