--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
              </p>
     </div>
         <a class="column titles work" work" id="work">Work</a>
-        <div class="picCon">           
-            <a href="https://rpgthegame.herokuapp.com/"><img class="workPic" src="./assets/pictures/knights.jpg"></a>          
+        <div class="picCon"> 
+            <p class="picText">RPG the GAME</p>          
+            <a href="https://rpgthegame.herokuapp.com/"><img class="workPic" src="./assets/pictures/knights.jpg"></a> 
+            <p class="picText2">Calendar</p>
             <a href="https://stiicer.github.io/Very-good-calendar-/"><img class="workPic" src="./assets/pictures/keyboard2.jpg"></a>
+            <p class="picText3">Quiz</p>
             <a href="https://stiicer.github.io/Super-hard-quiz/"><img class="workPic" src="./assets/pictures/code.jpg"></a>           
         </div>
         <a class="column titles contact" id="contact">Contact</a>
